feat(JWT): Move JWT to Header
