# gen/http/openapi3.yaml
@@ -1,82 +1,186 @@
 openapi: 3.0.3
 info:
-    title: Goa API
-    description: The Kubernetes Federated Credential Api
-    version: 0.0.1
+  title: Goa API
+  description: The Kubernetes Federated Credential Api
+  version: 0.0.1
 servers:
-    - url: http://0.0.0.0:8088
+  - url: http://0.0.0.0:8088
 paths:
-    /exchangeToken:
-        post:
-            tags:
-                - tokenExchange
-            summary: exchangeToken tokenExchange
-            operationId: tokenExchange#exchangeToken
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/ExchangeTokenRequestBody'
-                        example:
-                            jwt: Rerum quia non et.
-                            namespace: Commodi eveniet a consectetur.
-                            serviceAccountName: Et illum qui aut.
-            responses:
-                "200":
-                    description: OK response.
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/StatusResult'
-                            example:
-                                status:
-                                    token: Et ab commodi voluptate eligendi non temporibus.
+  /exchangeToken:
+    post:
+      tags:
+        - tokenExchange
+      summary: exchangeToken tokenExchange
+      operationId: tokenExchange#exchangeToken
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExchangeTokenRequestBody'
+            example:
+              namespace: q0t
+              serviceAccountName: ki0
+      responses:
+        "200":
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatusResult'
+              example:
+                status:
+                  token: aa6
+        "400":
+          description: 'bad_request_error: Bad Request'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "401":
+          description: 'unauthorized: Unauthorized'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "403":
+          description: 'forbidden: Forbidden'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "404":
+          description: 'not_found: Not Found'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "406":
+          description: 'not_acceptable: Not Acceptable'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "415":
+          description: 'unsupported_media_type: Unsupported Media Type'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "429":
+          description: 'too_many_requests: Too Many Requests'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: 'internal_error: Internal Server Error'
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - jwt_header_Authorization: []
 components:
-    schemas:
-        ExchangeTokenRequestBody:
-            type: object
-            properties:
-                jwt:
-                    type: string
-                    description: The JWT Token from the impersonating service account
-                    example: Fugiat incidunt omnis mollitia fugit architecto qui.
-                namespace:
-                    type: string
-                    description: The target namespace for impersonation
-                    example: Molestiae animi ab.
-                serviceAccountName:
-                    type: string
-                    description: The target serviceAccount
-                    example: Officia expedita magnam et enim.
-            example:
-                jwt: Maiores unde.
-                namespace: Qui voluptas ad quis sit voluptates tempora.
-                serviceAccountName: Molestiae ad error voluptas.
-        Status:
-            type: object
-            properties:
-                token:
-                    type: string
-                    description: The status token
-                    example: Est alias harum ut quis quod totam.
-            description: Status with a token.
-            example:
-                token: Iste numquam veritatis aut quas.
-            required:
-                - token
-        StatusResult:
-            type: object
-            properties:
-                status:
-                    $ref: '#/components/schemas/Status'
-            example:
-                status:
-                    token: Et ab commodi voluptate eligendi non temporibus.
-            required:
-                - status
+  schemas:
+    Error:
+      type: object
+      properties:
+        fault:
+          type: boolean
+          description: Is the error a server-side fault?
+          example: true
+        id:
+          type: string
+          description: ID is a unique identifier for this particular occurrence of the problem.
+          example: 123abc
+        message:
+          type: string
+          description: Message is a human-readable explanation specific to this occurrence of the problem.
+          example: parameter 'p' must be an integer
+        name:
+          type: string
+          description: Name is the name of this class of errors.
+          example: bad_request
+        temporary:
+          type: boolean
+          description: Is the error temporary?
+          example: false
+        timeout:
+          type: boolean
+          description: Is the error a timeout?
+          example: false
+      description: Internal Server Error
+      example:
+        fault: false
+        id: 123abc
+        message: parameter 'p' must be an integer
+        name: bad_request
+        temporary: true
+        timeout: true
+      required:
+        - name
+        - id
+        - message
+        - temporary
+        - timeout
+        - fault
+      additionalProperties: false
+    ExchangeTokenRequestBody:
+      type: object
+      properties:
+        namespace:
+          type: string
+          description: The target namespace for impersonation
+          example: i3l
+          pattern: '[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*'
+          maxLength: 253
+        serviceAccountName:
+          type: string
+          description: The target serviceAccount
+          example: 4xu
+          pattern: '[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*'
+          maxLength: 253
+      example:
+        namespace: ytc
+        serviceAccountName: hi6
+      required:
+        - namespace
+        - serviceAccountName
+      additionalProperties: false
+    Status:
+      type: object
+      properties:
+        token:
+          type: string
+          description: The status token
+          example: hi3
+          pattern: ^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$
+          maxLength: 2000
+      description: Status with a token.
+      example:
+        token: iho
+      required:
+        - token
+      additionalProperties: false
+    StatusResult:
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/Status'
+      example:
+        status:
+          token: aa6
+      required:
+        - status
+      additionalProperties: false
+  securitySchemes:
+    jwt_header_Authorization:
+      type: http
+      description: Use JWT to authenticate requests.
+      scheme: bearer
 tags:
-    - name: livez
-    - name: readyz
-    - name: tokenExchange
-      description: Exchange an incoming Kubernetes Token for Another Kubernetes Token
+  - name: livez
+  - name: readyz
+  - name: tokenExchange
+    description: Exchange an incoming Kubernetes Token for Another Kubernetes Token
